--- a/WCSTrainer/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,12 +1,11 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
 <partial name="_StatusMessage" for="StatusMessage" />
-<h3>@ViewData["Title"]</h3>
+<h3>Profile</h3>
 <form id="profile-form" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
     <div>
