--- a/WCSTrainer/Pages/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Employees/Edit.cshtml
@@ -15,6 +15,7 @@
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <input type="hidden" asp-for="Employee.Id" />
                         <input asp-for="Employee.UserAccountId" class="form-control" hidden />
+                        <input asp-for="Employee.Skills" class="form-control" hidden />
 
                         <div class="form-group">
                             <div class="form">
@@ -43,16 +44,6 @@
                                     <span asp-validation-for="Employee.Status" class="text-danger"></span>
                                 </div>
                                 <input asp-for="Employee.Status" class="form-control" />
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="form">
-                                <div class="labels">
-                                    <label asp-for="Employee.Skills" class="control-label"></label>
-                                    <span asp-validation-for="Employee.Skills" class="text-danger"></span>
-                                </div>
-                                <input asp-for="Employee.Skills" class="form-control" />
                             </div>
                         </div>
 
