--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -42,14 +42,19 @@
                     <ul>
                         @foreach (var item in Model.TrainingOrder.Reverse()) {
                             if (Model.listCount < Model.maxCount) {
-                                <li id="@item.Id @item.TraineeId" class="@item.Status searchable">
+                                string name;
+                                if (item.Trainee != null) {
+                                    name = item.Trainee.FirstName + " " + item.Trainee.LastName;
+                                } else {
+                                    name = "N/A";
+                                }
+                                <li id="@item.Id @name" class="@item.Status searchable">
                                     <div class="info">
                                         <div class="title">
-                                            <p>Training Order ID: @item.Id </p>
+                                            <p>Training Order #@item.Id </p>
                                         </div>
                                         <div class="sub">
-                                            <p class="identifier">Trainee - </p>
-                                            @item.TraineeId
+                                            <p class="identifier">Trainee - @name</p>
                                         </div>
                                         <div class="sub">
                                             <p class="identifier">Status - </p>
