--- a/WCSTrainer/Pages/Shared/RazorComponents/Sidebar.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/Sidebar.razor
@@ -6,6 +6,7 @@
             List<(string, string)> links = new List<(string, string)> {
                 ("TrainingOrders", "Training Orders"),
                 ("Employees", "Employees"),
+                ("TrainerGroups", "Trainer Groups"),
                 ("Skills", "Skills"),
                 ("Locations", "Locations"),
                 ("Accounts", "Account Manager"),
