--- a/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
@@ -16,7 +16,7 @@
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <input type="hidden" asp-for="TrainingOrder.Id"/>
                         <input asp-for="TrainingOrder.BeginDate" type="hidden" />
-                        <input asp-for="TrainingOrder.EndDate" type="hidden" />
+                        <input asp-for="TrainingOrder.CompletionDate" type="hidden" />
                         <input asp-for="TrainingOrder.CreateDate" type="hidden" />
 
                         <input asp-for="TrainingOrder.Medium" type="hidden" />
