--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -169,6 +169,7 @@ nav {
                     margin-top: 30px;
                     display: flex;
                     width: 100%;
+                    max-width: 800px;
                 }
 
                 .panel .body .properties .user-form .btn-container {
@@ -282,16 +283,27 @@ nav {
                         align-self: flex-end;
                     }
 
+                .panel .body .properties .user-form .field-container .title-row {
+                    margin-top: 20px;
+                    background-color: var(--gray3);
+                    padding: 5px;
+                    border-bottom: 1px solid var(--gray4);
+                }
+
+                .panel .body .properties .user-form .field-container .title-row .title {
+                    font-size: 16px;
+                }
+
                 .panel .body .properties .user-form .field-container .text-group {
                     border-bottom: 1px solid var(--gray3);
                     flex-direction: row;
-                    max-width: 800px;
                     display: flex;
-                    width: 100%;
                     padding: 4px 0;
+                    width: 100%;
                 }
 
                     .panel .body .properties .user-form .field-container .text-group .title {
+                        padding-left: 5px;
                         color: var(--textSub1);
                         font-size: 16px;
                         min-width: 200px;
@@ -526,7 +538,7 @@ nav {
 
 
                 .panel .body .properties .order-list2 table {
-                    display: flex;
+                    width: 100%;
                 }
 
                     .panel .body .properties .order-list2 table tr {
@@ -553,7 +565,6 @@ nav {
                         border-bottom: 1px solid var(--textMain);
                         text-align: start;
                         color: var(--textMain);
-                        padding-right: 30px;
                     }
 
             .panel .body .properties .scheduling {
