--- a/WCSTrainer/wwwroot/css/universal.css
+++ b/WCSTrainer/wwwroot/css/universal.css
@@ -127,4 +127,15 @@ pre {
     header, footer {
         display: none !important;
     }
+
+    .title-row {
+        margin-top: 30px !important;
+        background-color: var(--gray3);
+        padding: 3px !important;
+        border-bottom: 1px solid black;
+    }
+
+        .title-row .title {
+            font-size: 16px;
+        }
 }
