--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -92,33 +92,35 @@
                                 </textarea>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="form">
-                                <div class="labels">
-                                    <p class="control-label">Training Hours Needed</p>
-                                    <span asp-validation-for="TrainingOrder.Duration" class="text-danger"></span>
+                        @if (!Model.TrainingOrder.Status.Equals("Awaiting Approval")) {
+                            <div class="form-group">
+                                <div class="form">
+                                    <div class="labels">
+                                        <p class="control-label">Training Hours Needed</p>
+                                        <span asp-validation-for="TrainingOrder.Duration" class="text-danger"></span>
+                                    </div>
+                                    <input asp-for="TrainingOrder.Duration" class="form-control" />
                                 </div>
-                                <input asp-for="TrainingOrder.Duration" class="form-control" />
+                                <div class="form">
+                                    <div class="labels">
+                                        <p class="control-label">Priority Level</p>
+                                        <span asp-validation-for="TrainingOrder.Priority" class="text-danger"></span>
+                                    </div>
+                                    <select asp-for="TrainingOrder.Priority" class="form-drop2">
+                                        <option value="High">High</option>
+                                        <option value="Medium">Medium</option>
+                                        <option value="Low">Low</option>
+                                    </select>
+                                </div>
                             </div>
+                        }
+                        <div class="form-group">
                             <div class="form">
                                 <div class="labels">
                                     <p class="control-label">Learning Medium</p>
                                     <span asp-validation-for="TrainingOrder.Medium" class="text-danger"></span>
                                 </div>
                                 <input asp-for="TrainingOrder.Medium" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="form">
-                                <div class="labels">
-                                    <p class="control-label">Priority Level</p>
-                                    <span asp-validation-for="TrainingOrder.Priority" class="text-danger"></span>
-                                </div>
-                                <select asp-for="TrainingOrder.Priority" class="form-drop2">
-                                    <option value="High">High</option>
-                                    <option value="Medium">Medium</option>
-                                    <option value="Low">Low</option>
-                                </select>
                             </div>
                             <div class="form">
                                 <div class="labels">
