--- a/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
@@ -37,7 +37,7 @@
                         <div class="form-group">
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">How effective was the training?</p>
+                                    <p class="control-label">Has the individual grasped the training?</p>
                                 </div>
                                 <textarea asp-for="VerifyNotes" rows="5"></textarea>
                             </div>
