--- a/WCSTrainer/Pages/TrainingOrders/Assign.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Assign.cshtml
@@ -14,6 +14,12 @@
                 <div class="field-container">
                     <form method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                        <p>Choose Skill</p>
+                        <p>Training orders in skill</p>
+
+                        <p>Choose Trainee</p>
+
                     </form>
                 </div>
             </div>
