--- a/WCSTrainer/Pages/TrainingOrders/Assign.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Assign.cshtml
@@ -12,15 +12,30 @@
                 <p class="title">Assign Training</p>
                 <p class="sub">Assign sets of training orders which teach a certain skill to employees.</p>
                 <div class="field-container">
-                    <form method="post">
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                        <p>Choose Skill</p>
-                        <p>Training orders in skill</p>
+                    <p>Select and view a skill.</p>
+                    <select asp-for="SelectedSkillId" asp-items="@Model.selectSkills"></select>
 
-                        <p>Choose Trainee</p>
+                    @if (Model.selectedSkill != null) {
+                        <div>
+                            <p>@Model.selectedSkill.Name</p>
+                            <p>@Model.selectedSkill.Description</p>
+                            @foreach (var order in Model.selectedSkill.TrainingOrders) {
+                                <div class="pill">Order #@order.Id</div>
+                            }
+                        </div>
+                    }
 
-                    </form>
+                    <p>Apply the skill to an employee.</p>
+                    <select asp-for="SelectedEmployeeId" asp-items="@Model.selectEmployees"></select>
+
+                    @if (Model.selectedEmployee != null) {
+                        <div>
+                            <p>@Model.selectedEmployee.FirstName</p>
+                            <p>@Model.selectedEmployee.LastName</p>
+                            <p>@Model.selectedEmployee.Status</p>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
