--- a/WCSTrainer/Pages/Accounts/Index.cshtml
+++ b/WCSTrainer/Pages/Accounts/Index.cshtml
@@ -1,8 +1,6 @@
 ﻿@page
-@model WCSTrainer.Pages.Skills.IndexModel
-
+@model WCSTrainer.Pages.AccountManager.IndexModel
 @{
-    ViewData["Title"] = "Index";
 }
 
 <div class="panel">
@@ -13,18 +11,14 @@
                 <div class="order-list2">
                     <table id="dataTable">
                         <tr>
-                            <th>Skill ID</th>
-                            <th>Name</th>
-                            <th>Description</th>
+                            <th>Username</th>
                             <th></th>
                             <th></th>
                             <th></th>
                         </tr>
-                        @foreach (var item in Model.Skill) {
+                        @foreach (var item in Model.Users) {
                             <tr class="clickable">
-                                <td>@Html.DisplayFor(modelItem => item.Id)</td>
-                                <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                                <td>@Html.DisplayFor(modelItem => item.Description)</td>
+                                <td>@Html.DisplayFor(modelItem => item.UserName)</td>
                                 <td><a asp-page="./Edit" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Edit</a></td>
                                 <td><a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Details</a></td>
                                 <td><a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Delete</a></td>
@@ -36,4 +30,3 @@
         </div>
     </div>
 </div>
-
