--- a/WCSTrainer/Pages/Locations/Index.cshtml
+++ b/WCSTrainer/Pages/Locations/Index.cshtml
@@ -29,6 +29,11 @@
                             </tr>
                         }
                     </table>
+                    <div class="sorters">
+                        <div class="btns">
+                            <a asp-page="Create" class="btn bg-btn btnWhite">Create Group</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
