--- a/WCSTrainer/Pages/Locations/Edit.cshtml
+++ b/WCSTrainer/Pages/Locations/Edit.cshtml
@@ -2,7 +2,7 @@
 @model WCSTrainer.Pages.Locations.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+   ViewData["Title"] = "Edit";
 }
 
 
@@ -14,26 +14,28 @@
 <hr />
 
 <div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Location.Id" />
-            <div class="form-group">
-                <label asp-for="Location.Name" class="control-label"></label>
-                <input asp-for="Location.Name" class="form-control" />
-                <span asp-validation-for="Location.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+   <div class="col-md-4">
+      <form method="post">
+         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+         <input type="hidden" asp-for="Location.Id" />
+         <div class="form-group">
+            <label asp-for="Location.Name" class="control-label"></label>
+            <input asp-for="Location.Name" class="form-control" />
+            <span asp-validation-for="Location.Name" class="text-danger"></span>
+         </div>
+         <div class="form-group">
+            <input type="submit" value="Save" class="btn btn-primary" />
+         </div>
+      </form>
+   </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+   <a asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+   @{
+      await Html.RenderPartialAsync("_ValidationScriptsPartial");
+   }
 }
