--- a/WCSTrainer/Pages/Shared/_LoginPartial.cshtml
+++ b/WCSTrainer/Pages/Shared/_LoginPartial.cshtml
@@ -4,16 +4,13 @@
 @inject SignInManager<UserAccount> SignInManager
 @inject UserManager<UserAccount> UserManager
 
-@if (SignInManager.IsSignedIn(User))
-{
-    var user = await UserManager.GetUserAsync(User);
-    <p class="login-email">@user.Email</p>
-    <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-        <button id="logout" type="submit" class="btn bg-btn btnWhite">Logout</button>
-    </form>
-}
-else
-{
-    <a id="register" asp-area="Identity" asp-page="/Account/Register" class="btn bg-btn btnWhite">Register</a>
-    <a id="login" asp-area="Identity" asp-page="/Account/Login" class="btn bg-btn btnWhite">Login</a>
+@if (SignInManager.IsSignedIn(User)) {
+   var user = await UserManager.GetUserAsync(User);
+   <p class="login-email">@user.Email</p>
+   <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
+      <button id="logout" type="submit" class="btn bg-btn btnWhite">Logout</button>
+   </form>
+} else {
+   <a id="register" asp-area="Identity" asp-page="/Account/Register" class="btn bg-btn btnWhite">Register</a>
+   <a id="login" asp-area="Identity" asp-page="/Account/Login" class="btn bg-btn btnWhite">Login</a>
 }
