--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -24,6 +24,11 @@
             <span asp-validation-for="Skill.Description" class="text-danger"></span>
          </div>
          <div class="form-group">
+            <label asp-for="Skill.TrainingOrders" class="control-label"></label>
+            <input asp-for="Skill.Description" class="form-control" />
+            <span asp-validation-for="Skill.Description" class="text-danger"></span>
+         </div>
+         <div class="form-group">
             <input type="submit" value="Create" class="btn btn-primary" />
          </div>
       </form>
