assign sort of working

--- a/WCSTrainer/Pages/Skills/Assign.cshtml
+++ b/WCSTrainer/Pages/Skills/Assign.cshtml
@@ -59,7 +59,7 @@
                            <ul id="trainee" class="pill-container">
                            </ul>
                            <div class="btn bg-btn btnWhite" onclick="openComponent('trainees')"><p>Select</p></div>
-                           <input id="traineeInput" asp-for="@Model.SelectedTraineeId" type="hidden" />
+                           <input id="traineeInput" asp-for="@Model.SelectedTraineeId" />
                         </div>
                      </div>
                   </div>
