--- a/WCSTrainer/Pages/Skills/Details.cshtml
+++ b/WCSTrainer/Pages/Skills/Details.cshtml
@@ -11,18 +11,17 @@
    <h4>Skill</h4>
    <hr />
    <dl class="row">
-      <dt class="col-sm-2">
-         @Html.DisplayNameFor(model => model.Skill.Name)
-      </dt>
       <dd class="col-sm-10">
          @Html.DisplayFor(model => model.Skill.Name)
       </dd>
-      <dt class="col-sm-2">
-         @Html.DisplayNameFor(model => model.Skill.Description)
-      </dt>
       <dd class="col-sm-10">
          @Html.DisplayFor(model => model.Skill.Description)
       </dd>
+      @foreach (var order in Model.Skill.TrainingOrders) {
+         <dd class="col-sm-10">
+            Order #@order.Id
+         </dd>
+      }
    </dl>
 </div>
 <div>
