--- a/WCSTrainer/Pages/Employees/Index.cshtml
+++ b/WCSTrainer/Pages/Employees/Index.cshtml
@@ -12,6 +12,7 @@
       <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
       <div class="properties">
          <div class="flex-column">
+            <p class="title">Employee Editor</p>
             <div class="order-list2">
                <table id="dataTable">
                   <tr>
@@ -20,8 +21,6 @@
                      <th>Last Name</th>
                      <th>Status</th>
                      <th></th>
-                     <th></th>
-                     <th></th>
                   </tr>
                   @foreach (var item in Model.Employees) {
                      <tr class="clickable">
@@ -29,9 +28,11 @@
                         <td>@Html.DisplayFor(modelItem => item.FirstName)</td>
                         <td>@Html.DisplayFor(modelItem => item.LastName)</td>
                         <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                        <td><a asp-page="./Edit" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Edit</a></td>
-                        <td><a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Details</a></td>
-                        <td><a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Delete</a></td>
+                        <td>
+                           <a asp-page="./Edit" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Edit</a>
+                           <a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Details</a>
+                           <a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Delete</a>
+                        </td>
                      </tr>
                   }
                </table>
