--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -79,6 +79,11 @@ nav {
 			align-items: center;
 		}
 
+		nav .nav-container .nav-options img {
+			height: 20px;
+			filter: invert(50%);
+		}
+
 			nav .nav-container .nav-options a, form button {
 				padding: 5px 10px;
 				font-size: 15px;
